[gd_scene load_steps=35 format=3 uid="uid://bjss4nulwphgk"]

[ext_resource type="Script" path="res://scripts/change_hair_container.gd" id="1_j81wa"]
[ext_resource type="Texture2D" uid="uid://cctpinheeduv2" path="res://UI/craftpix-net-775352-game-user-interface-pixel-art/3 Icons/Icons blue/Icon_01.png" id="9_vu4hn"]
[ext_resource type="Texture2D" uid="uid://dckgvjj6um2eq" path="res://UI/craftpix-net-775352-game-user-interface-pixel-art/1 Frames/Frame2.png" id="16_wbc83"]
[ext_resource type="Texture2D" uid="uid://by4m3gk3q07jp" path="res://UI/craftpix-net-775352-game-user-interface-pixel-art/3 Icons/Icons yellow/Icon_05.png" id="17_y0pte"]
[ext_resource type="Texture2D" uid="uid://dpii1qdr5xa7i" path="res://UI/craftpix-net-775352-game-user-interface-pixel-art/3 Icons/Icons yellow/Icon_06.png" id="18_iwp83"]
[ext_resource type="Texture2D" uid="uid://idvk8ec7fwfh" path="res://UI/craftpix-net-775352-game-user-interface-pixel-art/1 Frames/Frame_tiles/Frame_Tile_15.png" id="19_yqp1x"]
[ext_resource type="FontFile" uid="uid://b13xmp6wu4ea" path="res://UI/craftpix-net-775352-game-user-interface-pixel-art/6 Font/CraftPixNet Survival Kit.otf" id="20_3r8l1"]
[ext_resource type="Texture2D" uid="uid://bxsowbfp3t6yn" path="res://UI/craftpix-net-775352-game-user-interface-pixel-art/2 Bars/Button1.png" id="21_2ijwj"]
[ext_resource type="Script" path="res://scripts/button-scale.gd" id="22_b5gvk"]

[sub_resource type="LabelSettings" id="LabelSettings_aos0l"]
font = ExtResource("20_3r8l1")
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_06qn1"]
font = ExtResource("20_3r8l1")
font_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oqbbt"]
bg_color = Color(0.6, 0.6, 0.6, 0)
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_axsdt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1aow"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jco07"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xf6m1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6gls"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhx40"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kt60c"]
bg_color = Color(1, 0.213647, 0.713755, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m181f"]
bg_color = Color(0.97026, 0.000659006, 0.950987, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wxde0"]
font = ExtResource("20_3r8l1")
font_size = 14
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 13
shadow_color = Color(0.85982, 0, 0.251514, 0)
shadow_offset = Vector2(22, 1)

[sub_resource type="Animation" id="Animation_ekpm1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(45, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(31, 11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qsr47"]
resource_name = "hover_scale"
length = 0.133
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(45, 24), Vector2(49, 28)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(31, 11), Vector2(30, 9.66667), Vector2(29.6667, 10.3333)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1.1, 1.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f7x11"]
_data = {
"RESET": SubResource("Animation_ekpm1"),
"hover_scale": SubResource("Animation_qsr47")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g5qt8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ma4jl"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="LabelSettings" id="LabelSettings_3umho"]
font = ExtResource("20_3r8l1")
font_size = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ghrf6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pr053"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7wwe6"]
font = ExtResource("20_3r8l1")
font_size = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2csbp"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bwvfg"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cnf1j"]
font = ExtResource("20_3r8l1")
font_size = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bexmh"]
font = ExtResource("20_3r8l1")
font_size = 10
shadow_color = Color(0, 0, 0, 1)

[node name="Control" type="Node2D"]
position = Vector2(181, 144)
script = ExtResource("1_j81wa")

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_right = 164.0
offset_bottom = 133.0

[node name="ChangeHairContainer" type="Control" parent="Container"]
texture_filter = 1
layout_mode = 2
anchors_preset = 0
offset_left = 24.0
offset_top = -17.0
offset_right = 138.0
offset_bottom = 23.0

[node name="Frame5" type="Sprite2D" parent="Container/ChangeHairContainer"]
position = Vector2(102.333, 27.6667)
texture = ExtResource("16_wbc83")

[node name="ChangeHair" type="Button" parent="Container/ChangeHairContainer"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 3.78333
anchor_top = 0.9
anchor_right = 3.78333
anchor_bottom = 0.9
offset_left = -340.3
offset_top = -19.0
offset_right = -318.3
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("17_y0pte")
flat = true
expand_icon = true

[node name="Frame2" type="Sprite2D" parent="Container/ChangeHairContainer"]
position = Vector2(13.333, 27.6667)
texture = ExtResource("16_wbc83")

[node name="ChangeHairBack" type="Button" parent="Container/ChangeHairContainer"]
texture_filter = 1
layout_mode = 2
offset_left = 2.0
offset_top = 16.0
offset_right = 24.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("18_iwp83")
flat = true
expand_icon = true

[node name="FrameTile15" type="Sprite2D" parent="Container/ChangeHairContainer"]
position = Vector2(57.333, 27.6667)
scale = Vector2(3.78125, 0.812499)
texture = ExtResource("19_yqp1x")

[node name="Label" type="Label" parent="Container/ChangeHairContainer"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 3.2
anchor_top = 0.7
anchor_right = 3.2
anchor_bottom = 0.7
offset_left = -319.8
offset_top = -8.0
offset_right = -296.8
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "Hair"
label_settings = SubResource("LabelSettings_aos0l")

[node name="ChangeOutfitContainer" type="Control" parent="Container"]
texture_filter = 1
layout_mode = 2
anchors_preset = 0
offset_left = 27.0
offset_top = 25.0
offset_right = 139.0
offset_bottom = 65.0

[node name="FrameTile16" type="Sprite2D" parent="Container/ChangeOutfitContainer"]
position = Vector2(55, 21)
scale = Vector2(3.78125, 0.812499)
texture = ExtResource("19_yqp1x")

[node name="Frame3" type="Sprite2D" parent="Container/ChangeOutfitContainer"]
position = Vector2(101, 20)
texture = ExtResource("16_wbc83")

[node name="ChangeOutfit" type="Button" parent="Container/ChangeOutfitContainer"]
layout_mode = 0
offset_left = 90.0
offset_top = 9.00003
offset_right = 112.0
offset_bottom = 31.0
icon = ExtResource("17_y0pte")
flat = true
expand_icon = true

[node name="Frame4" type="Sprite2D" parent="Container/ChangeOutfitContainer"]
position = Vector2(10, 20)
texture = ExtResource("16_wbc83")

[node name="ChangeOutfitBack" type="Button" parent="Container/ChangeOutfitContainer"]
layout_mode = 0
offset_left = -1.0
offset_top = 9.0
offset_right = 21.0
offset_bottom = 31.0
icon = ExtResource("18_iwp83")
flat = true
expand_icon = true

[node name="outfit" type="Label" parent="Container/ChangeOutfitContainer"]
layout_mode = 0
offset_left = 36.667
offset_top = 14.3332
offset_right = 76.667
offset_bottom = 37.3332
text = "Outfit
"
label_settings = SubResource("LabelSettings_06qn1")

[node name="NickName" type="Control" parent="Container"]
texture_filter = 1
layout_mode = 2
anchors_preset = 0
offset_left = 49.333
offset_top = 58.0
offset_right = 89.333
offset_bottom = 98.0

[node name="LineEdit" type="LineEdit" parent="Container/NickName"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.841667
anchor_top = -0.133333
anchor_right = 0.841667
anchor_bottom = -0.133333
offset_left = -74.9997
offset_top = 19.3333
offset_right = 76.0003
offset_bottom = 45.3333
theme_override_fonts/font = ExtResource("20_3r8l1")
placeholder_text = "insert Nickname"
alignment = 1

[node name="Save" type="Control" parent="Container"]
layout_mode = 2
anchors_preset = 0
offset_left = 31.0
offset_top = 93.0
offset_right = 140.0
offset_bottom = 133.0

[node name="Button" type="Button" parent="Container/Save"]
layout_mode = 0
offset_left = 31.0
offset_top = 11.0
offset_right = 76.0
offset_bottom = 35.0
theme_override_styles/focus = SubResource("StyleBoxFlat_oqbbt")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_axsdt")
theme_override_styles/disabled = SubResource("StyleBoxFlat_h1aow")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_jco07")
theme_override_styles/hover = SubResource("StyleBoxFlat_xf6m1")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_i6gls")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vhx40")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_kt60c")
theme_override_styles/normal = SubResource("StyleBoxFlat_m181f")
icon = ExtResource("21_2ijwj")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("22_b5gvk")

[node name="Label" type="Label" parent="Container/Save"]
layout_mode = 0
offset_left = 39.0
offset_top = 12.6667
offset_right = 72.0
offset_bottom = 28.6667
text = "Save"
label_settings = SubResource("LabelSettings_wxde0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container/Save"]
libraries = {
"": SubResource("AnimationLibrary_f7x11")
}

[node name="HairColor" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 140.0
offset_top = -6.0
offset_right = 285.0
offset_bottom = 34.0

[node name="HairColorContainer" type="Panel" parent="HairColor"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -25.0
offset_right = -25.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g5qt8")

[node name="RedSlider" type="HSlider" parent="HairColor/HairColorContainer"]
layout_mode = 2
offset_left = 2.0
offset_top = 6.0
offset_right = 182.0
offset_bottom = 22.0
scale = Vector2(0.5, 0.5)
theme_override_icons/grabber_disabled = ExtResource("9_vu4hn")
theme_override_styles/slider = SubResource("StyleBoxFlat_ma4jl")

[node name="RedValueLabel" type="Label" parent="HairColor/HairColorContainer"]
layout_mode = 2
offset_left = 95.0
offset_top = 4.0
offset_right = 112.0
offset_bottom = 16.0
text = "124"
label_settings = SubResource("LabelSettings_3umho")

[node name="HairColorContainer2" type="Panel" parent="HairColor"]
layout_mode = 0
offset_left = 15.0
offset_top = 13.0
offset_right = 136.0
offset_bottom = 30.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ghrf6")

[node name="GreenSlider" type="HSlider" parent="HairColor/HairColorContainer2"]
layout_mode = 2
offset_left = 2.0
offset_right = 182.0
offset_bottom = 16.0
scale = Vector2(0.5, 0.5)
theme_override_styles/slider = SubResource("StyleBoxFlat_pr053")

[node name="GreenValueLabel" type="Label" parent="HairColor/HairColorContainer2"]
layout_mode = 2
offset_left = 96.0
offset_top = -2.0
offset_right = 110.0
offset_bottom = 10.0
text = "123"
label_settings = SubResource("LabelSettings_7wwe6")

[node name="HairColorContainer3" type="Panel" parent="HairColor"]
layout_mode = 0
offset_left = 16.0
offset_top = 31.0
offset_right = 139.0
offset_bottom = 46.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2csbp")

[node name="BlueSlider" type="HSlider" parent="HairColor/HairColorContainer3"]
layout_mode = 2
offset_left = 1.0
offset_top = -6.0
offset_right = 181.0
offset_bottom = 10.0
scale = Vector2(0.5, 0.5)
theme_override_styles/slider = SubResource("StyleBoxFlat_bwvfg")
max_value = 255.0

[node name="BlueValueLabel" type="Label" parent="HairColor/HairColorContainer3"]
layout_mode = 2
offset_left = 95.0
offset_top = -8.0
offset_right = 110.0
offset_bottom = 4.0
text = "122"
label_settings = SubResource("LabelSettings_cnf1j")

[node name="Label" type="Label" parent="HairColor"]
layout_mode = 0
offset_left = 37.0
offset_top = -11.0
offset_right = 92.0
offset_bottom = 12.0
text = "HAIR COLOR"
label_settings = SubResource("LabelSettings_bexmh")

[connection signal="text_changed" from="Container/NickName/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="mouse_entered" from="Container/Save/Button" to="Container/Save/Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Container/Save/Button" to="Container/Save/Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Container/Save/Button" to="Container/Save/Button" method="_on_pressed"]
